# ai-sdlc-runner

./: .gitmodules  LICENSE  README.md  pyproject.toml
config/: runner.yaml
docs/: ARCHITECTURE.md  ai-guideline.md
docs/acceptance/: ACC-20260617-01.md  ACC-20260617-02.md  ACC-20260617-03.md  ACC-20260617-04.md  ACC-20260617-05.md  ACC-20260617-06.md  ACC-20260617-07.md  ACC-20260617-08.md
docs/changes/: CHG-20260617-01.md  CHG-20260617-02.md  CHG-20260617-03.md  CHG-20260617-04.md  CHG-20260617-05.md  CHG-20260617-06.md  CHG-20260617-07.md  CHG-20260617-08.md
docs/structure/: data.md  design.md  directory.md  logical.md
src/ai_sdlc_runner/: __init__.py  agents.py  cli.py  contract.py  dashboard.py  executors.py  gates.py  orchestrator.py  skillstore.py  state.py  structure_scan.py  tui.py  workspace.py
tests/: conftest.py  test_contract.py  test_dashboard.py  test_executors.py  test_skillstore.py  test_tui.py  test_workspace.py
