[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sdlc-runner"
version = "0.1.0"
description = "External Python orchestrator that drives the ai-sdlc skill's semi-autonomous development loop. References (never copies) ai-skills contract v1; locks major.minor per project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ai-sdlc-runner" }]
# Standard library only by design: the runner stays a thin, dependency-light
# driver. PyYAML is optional; runner.yaml is parsed by a tiny built-in reader
# when PyYAML is absent, so the runner has zero hard runtime dependencies.
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
test = ["pytest>=7.0"]

[project.scripts]
runner = "ai_sdlc_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
